<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Around The Corner</string>
    <string name="action_settings">Settings</string>
	<string name="ad_image_description">advertisement image</string>
	<string name="ad_list_arrow">arrow icon</string>
	<string name="full_detail_view_description"><b><i>Description</i></b></string>
	<string name="full_detail_view_time"><b><i>Time</i></b></string>
	<string name="full_detail_view_distance"><b><i>Distance</i></b></string>
	<string name="full_detail_view_full_description"><b><i>Full description</i></b></string>
	<string name="full_detail_view_address"><b><i>Location</i></b></string>
	<string name="full_detail_view_get_direction"><i>get direction</i></string>
	<string name="map_tab_bar_event_text">EVENTS</string>
	<string name="map_tab_bar_promotion_text">DEALS</string>
	<string name="favorite_tab_bar_past_text">PAST</string>
	<string name="favorite_tab_bar_ongoing_text">ONGOING</string>
	
	<string name="check_box_msg">do not remind me again</string>
	
	<string name="ad_favorite_text">\u0020\u0020\u0020Add To Favorite</string>
	<string name="ad_like_text">Like</string>
	
	<string name="event_text">EVENTS</string>
	<string name="deal_text">DEALS</string>
	<string name="favorite_text">FAVORITES</string>
	<string name="map_text">MAPS</string>
	
	<string name="category_text">CATEGORIES</string>
	<string name="view_text">VIEWS</string>
	
	<string name="map_list_text">Map</string>
	<string name="events_list_text">Events</string>
	<string name="deals_list_text">Deals</string>
	<string name="favorite_list_text">Favorites</string>
	
	<string name="all_list_text">All</string>
	<string name="entertainment_list_text">Entertainment</string>
	<string name="education_list_text">Education</string>
	<string name="service_list_text">Service</string>
	<string name="organization_list_text">Organization</string>
	<string name="shopping_list_text">Shopping</string>
	<string name="food_list_text">Food</string>
	<string name="past_list_text">Past</string>
	<string name="ongoing_list_text">Ongoing</string>
</resources>