<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/map_tab_bar_event"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabbar_gradient_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/map_tab_bar_event_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#666666"
                android:padding="5dp"
                android:text="@string/map_tab_bar_event_text"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:textSize="14sp" />

            <View
                android:id="@+id/map_tab_bar_event_text_underline"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#a2a2ff" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c8c8c8" />

        <LinearLayout
            android:id="@+id/map_tab_bar_promotion"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tabbar_gradient_bg" 
            android:orientation="vertical">

            <TextView
                android:id="@+id/map_tab_bar_promotion_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#666666"
                android:padding="5dp"
                android:text="@string/map_tab_bar_promotion_text"
                android:textIsSelectable="false"
                android:textSize="14sp" />
            
             <View
                android:id="@+id/map_tab_bar_promotion_text_underline"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#cfcfcf" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#a2a2ff" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">
        
    <fragment
        android:id="@+id/map_fragment"
        android:layout_weight="0.98"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/map_time_selection_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/map_view_left_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/map_left_arrow_unselected"
            android:contentDescription="@string/ad_image_description" />

        <TextView
            android:id="@+id/map_view_time_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:gravity="center"
            android:textColor="#c2c2c2"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/map_view_right_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/map_right_arrow"
            android:contentDescription="@string/ad_image_description" />
    </LinearLayout>

    </LinearLayout>
</LinearLayout>