<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/favorite_gradient_bg"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/favorite_full_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="#ffffff"
                android:textIsSelectable="false"
                android:textSize="22sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/favorite_full_detail_image"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ad_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_detail_view_description"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/text_container"
            android:padding="5dip" >

            <TextView
                android:id="@+id/favorite_full_detail_short_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/favorite_full_detail_map"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/full_detail_view_address"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/favorite_full_detail_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/full_detail_view_get_direction"
                        android:textColor="#5050ff"
                        android:textIsSelectable="false"
                        android:textSize="13sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/favorite_full_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:textColor="#c2c2c2"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_full_detail_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp" >

                <fragment
                    android:id="@+id/favorite_full_detail_map_fragment"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="150dp"
                    android:layout_height="100dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/favorite_full_detail_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/favorite_full_detail_distance"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/full_detail_view_time"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/full_detail_view_from_time"
                        android:textColor="#c2c2c2"
                        android:textIsSelectable="false"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/favorite_full_detail_from_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:textColor="#a2a2a2"
                        android:textIsSelectable="false"
                        android:textSize="13sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/full_detail_view_to_time"
                        android:textColor="#c2c2c2"
                        android:textIsSelectable="false"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/favorite_full_detail_to_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#a2a2a2"
                        android:textIsSelectable="false"
                        android:textSize="13sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_full_detail_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/full_detail_view_distance"
                    android:textColor="#ffffff"
                    android:textIsSelectable="false"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/favorite_full_detail_distance_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textColor="#c2c2c2"
                    android:textIsSelectable="false"
                    android:textSize="14sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_detail_view_full_description"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/long_description_text_container"
            android:padding="5dip" >

            <TextView
                android:id="@+id/favorite_full_detail_full_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#c2c2c2"
                android:textIsSelectable="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/favorite_full_detail_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:textColor="#eeeeee"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>